ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/LoanApplicant__c.object-meta.xml
<CustomObject>
    <label>Loan Applicant</label>
    <nameField>
        <label>Loan Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>