ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>if(And(Month(Today())&gt;= month(DateOfBirth__c), Day(Today()) &gt;= Day(DateOfBirth__c)),
Year(Today())- Year(DateOfBirth__c) +
(Month(Today())-Month(DateOfBirth__c))/12,
if(And(month(Today())&lt; month(DateOfBirth__c), Day(Today())&gt;= Day(DateOfBirth__c)),
Year(Today())-Year(DateOfBirth__c)-1 +
(12 - Month(DateOfBirth__c)+month(Today()))/12,
if(And( month(Today())&lt; month(DateOfBirth__c), Day(Today())&lt; Day(DateOfBirth__c)),
(Year(Today())-Year(DateOfBirth__c)-1) +
((12 - Month(DateOfBirth__c)+month(Today())-1))/12,
if(And( month(Today())= month(DateOfBirth__c), Day(Today())&lt; Day(DateOfBirth__c)),
(Year(Today())- Year(DateOfBirth__c)-1) + (11/12),
(Year(Today())- Year(DateOfBirth__c)) +
(Month(Today())-Month(DateOfBirth__c)-1)/12))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>