ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/AnalysisOfNeeds__c.field-meta.xml
<CustomField>
    <fullName>AnalysisOfNeeds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if an analysis of needs has been completed for the applicant</description>
    <label>Analysis Of Needs</label>
    <type>Checkbox</type>
</CustomField>