ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/anticipateExpenseChange__c.field-meta.xml
<CustomField>
    <fullName>anticipateExpenseChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anticipate Expense Change</label>
    <type>Checkbox</type>
</CustomField>