ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/AnticipateExpenseChangeDescription__c.field-meta.xml
<CustomField>
    <fullName>AnticipateExpenseChangeDescription__c</fullName>
    <label>Anticipate Expense Change Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>