ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/anticipateIncomeChange__c.field-meta.xml
<CustomField>
    <fullName>anticipateIncomeChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anticipate Income Change</label>
    <type>Checkbox</type>
</CustomField>