ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/anticipateIncomeChangeHow__c.field-meta.xml
<CustomField>
    <fullName>anticipateIncomeChangeHow__c</fullName>
    <label>What Kind of Income Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AnticipateIncomeChangeHow</valueSetName>
    </valueSet>
</CustomField>