ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/AnyExistingDebtsInArrears__c.field-meta.xml
<CustomField>
    <fullName>AnyExistingDebtsInArrears__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Existing Debts In Arrears</label>
    <type>Checkbox</type>
</CustomField>