ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/AnyExistingDebtsInArrearsDesc__c.field-meta.xml
<CustomField>
    <fullName>AnyExistingDebtsInArrearsDesc__c</fullName>
    <label>Any Existing Debts In Arrears Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>