ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/AnyOtherApplicationsInProgressWithOther__c.field-meta.xml
<CustomField>
    <fullName>AnyOtherApplicationsInProgressWithOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Applications In Progress W Other</label>
    <type>Checkbox</type>
</CustomField>