ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/anyOtherApplicationsInProgressWithOtherD__c.field-meta.xml
<CustomField>
    <fullName>anyOtherApplicationsInProgressWithOtherD__c</fullName>
    <label>Applications In Progress With Other Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>