ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/ApplicantId__c.field-meta.xml
<CustomField>
    <fullName>ApplicantId__c</fullName>
    <label>Applicant Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>