ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/AppliedforHardshipAssistance__c.field-meta.xml
<CustomField>
    <fullName>AppliedforHardshipAssistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied for Hardship Assistance</label>
    <type>Checkbox</type>
</CustomField>