ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/AppliedforHardshipAssistanceDesc__c.field-meta.xml
<CustomField>
    <fullName>AppliedforHardshipAssistanceDesc__c</fullName>
    <label>Applied for Hardship Assistance Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>