ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/AusPermResidentFlag__c.field-meta.xml
<CustomField>
    <fullName>AusPermResidentFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Flag if applicant is a permanent Australian resident</description>
    <label>Aus Perm Resident Flag</label>
    <type>Checkbox</type>
</CustomField>