ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/AusResidentStatus__c.field-meta.xml
<CustomField>
    <fullName>AusResidentStatus__c</fullName>
    <description>Applicant’s Australian Resident status</description>
    <label>Aus Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>