ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/BestCallTime__c.field-meta.xml
<CustomField>
    <fullName>BestCallTime__c</fullName>
    <description
  >At what time of day does the contact preferred to be called.</description>
    <label>Best Call Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anytime</fullName>
            </value>
            <value>
                <fullName>Early afternoon</fullName>
            </value>
            <value>
                <fullName>Early morning</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Late afternoon</fullName>
            </value>
            <value>
                <fullName>Mid-morning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>