ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/BusinessAddress__c.field-meta.xml
<CustomField>
    <fullName>BusinessAddress__c</fullName>
    <label>Business Address</label>
    <type>Address</type>
</CustomField>