ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/businessName__c.field-meta.xml
<CustomField>
    <fullName>businessName__c</fullName>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>