ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CitizenshipStatus__c.field-meta.xml
<CustomField>
    <fullName>CitizenshipStatus__c</fullName>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overseas Investor</fullName>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
            <value>
                <fullName>AU/NZCitizen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>