ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CompanyABN__c.field-meta.xml
<CustomField>
    <fullName>CompanyABN__c</fullName>
    <label>Company ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>