ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CompanyACN__c.field-meta.xml
<CustomField>
    <fullName>CompanyACN__c</fullName>
    <label>Company ACN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>