ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CompanyARBN__c.field-meta.xml
<CustomField>
    <fullName>CompanyARBN__c</fullName>
    <label>Company ARBN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>