ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/consentCreditScore__c.field-meta.xml
<CustomField>
    <fullName>consentCreditScore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Credit Score</label>
    <type>Checkbox</type>
</CustomField>