ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/consentIdCheck__c.field-meta.xml
<CustomField>
    <fullName>consentIdCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Id Check</label>
    <type>Checkbox</type>
</CustomField>