ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Applicants</relationshipLabel>
    <relationshipName>Loan_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>