ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/ContactPreference__c.field-meta.xml
<CustomField>
    <fullName>ContactPreference__c</fullName>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContactPreferences</valueSetName>
    </valueSet>
</CustomField>