ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CountryOfCitizenship__c.field-meta.xml
<CustomField>
    <fullName>CountryOfCitizenship__c</fullName>
    <label>Country Of Citizenship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>