ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CountryOfResidence__c.field-meta.xml
<CustomField>
    <fullName>CountryOfResidence__c</fullName>
    <label>Country Of Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>