ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CreditAuthoritySigned__c.field-meta.xml
<CustomField>
    <fullName>CreditAuthoritySigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Authority Signed</label>
    <type>Checkbox</type>
</CustomField>