ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CreditProblems__c.field-meta.xml
<CustomField>
    <fullName>CreditProblems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Problems</label>
    <type>Checkbox</type>
</CustomField>