ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CreditProblemsDesc__c.field-meta.xml
<CustomField>
    <fullName>CreditProblemsDesc__c</fullName>
    <label>Credit Problems Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>