ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/creditScoreRequest__c.field-meta.xml
<CustomField>
    <fullName>creditScoreRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Score Request</label>
    <type>Checkbox</type>
</CustomField>