ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CurrentAddressSince__c.field-meta.xml
<CustomField>
    <fullName>CurrentAddressSince__c</fullName>
    <label>Current Address Since</label>
    <length>20</length>
    <type>Text</type>
</CustomField>