ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CurrentResidentialAddress__c.field-meta.xml
<CustomField>
    <fullName>CurrentResidentialAddress__c</fullName>
    <label>Current Residential Address</label>
    <type>Address</type>
</CustomField>