ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CustomerofLender__c.field-meta.xml
<CustomField>
    <fullName>CustomerofLender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer of Lender</label>
    <type>Checkbox</type>
</CustomField>