ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/CustomerOfLenderMths__c.field-meta.xml
<CustomField>
    <fullName>CustomerOfLenderMths__c</fullName>
    <label>Customer Of Lender Mths</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>