ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>