ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/DependentCount__c.field-meta.xml
<CustomField>
    <fullName>DependentCount__c</fullName>
    <label>Dependent Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>