ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/DependentsAge__c.field-meta.xml
<CustomField>
    <fullName>DependentsAge__c</fullName>
    <label>Dependents Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>