ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/DifficultyMeetingFinancialCommitments__c.field-meta.xml
<CustomField>
    <fullName>DifficultyMeetingFinancialCommitments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Difficulty Meeting Financial Commitments</label>
    <type>Checkbox</type>
</CustomField>