ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/DifficultyMeetingFinancialCommitmentsDes__c.field-meta.xml
<CustomField>
    <fullName>DifficultyMeetingFinancialCommitmentsDes__c</fullName>
    <label>Difficulty Meeting Financial Commit Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>