ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Director</label>
    <type>Checkbox</type>
</CustomField>