ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/documentRequest__c.field-meta.xml
<CustomField>
    <fullName>documentRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Request</label>
    <type>Checkbox</type>
</CustomField>