ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/documentSmsRequest__c.field-meta.xml
<CustomField>
    <fullName>documentSmsRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Sms Request</label>
    <type>Checkbox</type>
</CustomField>