ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/DoNotSendMail__c.field-meta.xml
<CustomField>
    <fullName>DoNotSendMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Mail</label>
    <type>Checkbox</type>
</CustomField>