ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/DoNotSendMarketing__c.field-meta.xml
<CustomField>
    <fullName>DoNotSendMarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Marketing</label>
    <type>Checkbox</type>
</CustomField>