ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/DriversLicense__c.field-meta.xml
<CustomField>
    <fullName>DriversLicense__c</fullName>
    <label>Drivers License</label>
    <length>30</length>
    <type>Text</type>
</CustomField>