ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/effectiveTaxRate__c.field-meta.xml
<CustomField>
    <fullName>effectiveTaxRate__c</fullName>
    <label>Effective Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>