ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/EmailAddressAuto__c.field-meta.xml
<CustomField>
    <fullName>EmailAddressAuto__c</fullName>
    <formula>ContactId__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>