ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/EmployeeofLender__c.field-meta.xml
<CustomField>
    <fullName>EmployeeofLender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee of Lender</label>
    <type>Checkbox</type>
</CustomField>