ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/ExistingCustomerOfBroker__c.field-meta.xml
<CustomField>
    <fullName>ExistingCustomerOfBroker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Customer Of Broker</label>
    <type>Checkbox</type>
</CustomField>