ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/FinancialJudgementsLegalProceedingsDesc__c.field-meta.xml
<CustomField>
    <fullName>FinancialJudgementsLegalProceedingsDesc__c</fullName>
    <label>Financial Judgements Legal Proceedings D</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>