ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/FinancialJudgementsorlegalproceeding__c.field-meta.xml
<CustomField>
    <fullName>FinancialJudgementsorlegalproceeding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Judgements or Legal Proceeding</label>
    <type>Checkbox</type>
</CustomField>