ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/FirstHomeBuyer__c.field-meta.xml
<CustomField>
    <fullName>FirstHomeBuyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Home Buyer</label>
    <type>Checkbox</type>
</CustomField>