ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/ForeseeableChange__c.field-meta.xml
<CustomField>
    <fullName>ForeseeableChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether there are foreseeable changes for the contacts income</description>
    <label>ForeseeableChange</label>
    <type>Checkbox</type>
</CustomField>