ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>