ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/Greeting__c.field-meta.xml
<CustomField>
    <fullName>Greeting__c</fullName>
    <description>Sets the greeting field  with combination. of global picklist api with Name of the applicant.</description>
    <formula>CASE(TEXT(Salutation__c),
&quot;877&quot;,&quot;Mr&quot;,&quot;878&quot;,&quot;Ms&quot;,&quot;879&quot;,&quot;Miss&quot;,&quot;880&quot;,&quot;Mrs&quot;,&quot;881&quot;,&quot;Mx&quot;,&quot;882&quot;,&quot;Dr&quot;,&quot;883&quot;,&quot;Hon&quot;,&quot;&quot;)+ &apos; &apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Greeting</label>
    <type>Text</type>
</CustomField>