ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if the contact is a guarantor on this opportunity</description>
    <label>Guarantor</label>
    <type>Checkbox</type>
</CustomField>