ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/guarantorToAnyLoans__c.field-meta.xml
<CustomField>
    <fullName>guarantorToAnyLoans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guarantor To Any Loans</label>
    <type>Checkbox</type>
</CustomField>