ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/guarantorToAnyLoansDescription__c.field-meta.xml
<CustomField>
    <fullName>guarantorToAnyLoansDescription__c</fullName>
    <label>Guarantor To Any Loans Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>