ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/HouseholdContact__c.field-meta.xml
<CustomField>
    <fullName>HouseholdContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the contact is to receive communication for that address</description>
    <label>Household Contact</label>
    <type>Checkbox</type>
</CustomField>