ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/idCheckRequest__c.field-meta.xml
<CustomField>
    <fullName>idCheckRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID Check Request</label>
    <type>Checkbox</type>
</CustomField>