ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/IncomeChangeLoanRepaymentStrategy__c.field-meta.xml
<CustomField>
    <fullName>IncomeChangeLoanRepaymentStrategy__c</fullName>
    <label>How to continue to make loan repayments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AnticipateIncomeChangeLoanRepaymentStrat</valueSetName>
    </valueSet>
</CustomField>