ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/isAustralianCitizenOrPermanentResident__c.field-meta.xml
<CustomField>
    <fullName>isAustralianCitizenOrPermanentResident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Australian Citizen Or PR</label>
    <type>Checkbox</type>
</CustomField>