ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/isCompany__c.field-meta.xml
<CustomField>
    <fullName>isCompany__c</fullName>
    <description>Indicates if the contact is a company.</description>
    <label>Company?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>