ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/IsExpatriot__c.field-meta.xml
<CustomField>
    <fullName>IsExpatriot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expatriot</label>
    <type>Checkbox</type>
</CustomField>