ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/isPensioner__c.field-meta.xml
<CustomField>
    <fullName>isPensioner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pensioner</label>
    <type>Checkbox</type>
</CustomField>