ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/livingSituation__c.field-meta.xml
<CustomField>
    <fullName>livingSituation__c</fullName>
    <label>Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LivingSituations</valueSetName>
    </valueSet>
</CustomField>