ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/MaillingAddress__c.field-meta.xml
<CustomField>
    <fullName>MaillingAddress__c</fullName>
    <label>Mailling Address</label>
    <type>Address</type>
</CustomField>