ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MaritalStatuses</valueSetName>
    </valueSet>
</CustomField>