ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <label>Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>