ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/middleNameNotApplicable__c.field-meta.xml
<CustomField>
    <fullName>middleNameNotApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Middle Name Not Applicable</label>
    <type>Checkbox</type>
</CustomField>