ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/OtherNames__c.field-meta.xml
<CustomField>
    <fullName>OtherNames__c</fullName>
    <label>Other Names</label>
    <length>200</length>
    <type>Text</type>
</CustomField>