ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/PersonType__c.field-meta.xml
<CustomField>
    <fullName>PersonType__c</fullName>
    <label>Person Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PersonTypes</valueSetName>
    </valueSet>
</CustomField>