ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/politicallyExposedPerson__c.field-meta.xml
<CustomField>
    <fullName>politicallyExposedPerson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Politically Exposed Person</label>
    <type>Checkbox</type>
</CustomField>