ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/PostSettlementAddress__c.field-meta.xml
<CustomField>
    <fullName>PostSettlementAddress__c</fullName>
    <label>Post Settlement Address</label>
    <type>Address</type>
</CustomField>