ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/PreferredCommunications__c.field-meta.xml
<CustomField>
    <fullName>PreferredCommunications__c</fullName>
    <description>The contact’s preferred method of communication</description>
    <label>Preferred Communications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>