ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/PreviousName__c.field-meta.xml
<CustomField>
    <fullName>PreviousName__c</fullName>
    <description>Applicant’s previous name</description>
    <label>Previous Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>