ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/ProposeRepayingOther__c.field-meta.xml
<CustomField>
    <fullName>ProposeRepayingOther__c</fullName>
    <label>Propose Repaying Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>