ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutations</valueSetName>
    </valueSet>
</CustomField>