ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/SelfEmployed__c.field-meta.xml
<CustomField>
    <fullName>SelfEmployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Employed</label>
    <type>Checkbox</type>
</CustomField>