ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/ServiceabilityGuarantor__c.field-meta.xml
<CustomField>
    <fullName>ServiceabilityGuarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the contact is a serviceability guarantor on this opportunity</description>
    <label>Serviceability Guarantor</label>
    <type>Checkbox</type>
</CustomField>