ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/smsRequestVerification__c.field-meta.xml
<CustomField>
    <fullName>smsRequestVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Request Verification</label>
    <type>Checkbox</type>
</CustomField>