ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/SMSVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>SMSVerificationCode__c</fullName>
    <label>SMS Verification Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>