ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/SpouseFLEXId__c.field-meta.xml
<CustomField>
    <fullName>SpouseFLEXId__c</fullName>
    <externalId>true</externalId>
    <label>Spouse FLEX Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>