ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/TakingResidence__c.field-meta.xml
<CustomField>
    <fullName>TakingResidence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taking Residence</label>
    <type>Checkbox</type>
</CustomField>