ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/TaxDeductableAmt__c.field-meta.xml
<CustomField>
    <fullName>TaxDeductableAmt__c</fullName>
    <label>Tax Deductable Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>