ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/TaxDeductableAmtExisting__c.field-meta.xml
<CustomField>
    <fullName>TaxDeductableAmtExisting__c</fullName>
    <description>The existing amount that will be negatively geared for the applicant’s income.</description>
    <label>Tax Deductable Amt Existing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>