ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/ThirdPartyDisclosure__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyDisclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Disclosure</label>
    <type>Checkbox</type>
</CustomField>