ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/ToReceiveLoanOfferDocs__c.field-meta.xml
<CustomField>
    <fullName>ToReceiveLoanOfferDocs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Receive Loan Offer Docs</label>
    <type>Checkbox</type>
</CustomField>