ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalEarnedGrossAnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>totalEarnedGrossAnnualIncome__c</fullName>
    <label>Total Earned Gross Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>