ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalEarnedGrossMonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>totalEarnedGrossMonthlyIncome__c</fullName>
    <label>Total Earned Gross Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>