ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalGrossAnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>totalGrossAnnualIncome__c</fullName>
    <label>Total Gross Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>