ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/TotalHouseholdAnnualExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalHouseholdAnnualExpenses__c</fullName>
    <label>Total Household Annual Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>