ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalHouseholdMonthlyExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalHouseholdMonthlyExpenses__c</fullName>
    <label>Total Household Monthly Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>