ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalMonthlyAllDeclaredExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalMonthlyAllDeclaredExpenses__c</fullName>
    <label>Total Monthly All Declared Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>